--- a/Tests/TestWpf/MainWindow.xaml
+++ b/Tests/TestWpf/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="292" Width="424">
     <Grid>
-        <Button Content="Отправить" Margin="143,153,0,0" Height="54" VerticalAlignment="Top" Click="Button_Click" HorizontalAlignment="Left" Width="101"/>
+        <Button Content="Отправить" Margin="162,232,162,0" Height="34" VerticalAlignment="Top" Click="Button_Click"/>
         <TextBox Name="Login" Margin="126,34,0,0" Text="User name" HorizontalAlignment="Left" Width="209" Height="21" VerticalAlignment="Top"/>
         <PasswordBox Name="Password" HorizontalAlignment="Left" Margin="127,62,0,0" VerticalAlignment="Top" Width="208" Height="22"/>
         <Label Content="Имя пользователя" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top"/>
