--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -38,9 +38,21 @@
                                 <ComboBoxItem Content="Сервер 2"/>
                                 <ComboBoxItem Content="Сервер 3"/>
                             </ComboBox>
-                            <Button Content="Добавить"/>
-                            <Button Content="Редактировать"/>
-                            <Button Content="Удалить"/>
+                            <Button ToolTip="Добавить">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Height="20" Source="Media/add.png"/>
+                                </StackPanel>
+                            </Button>
+                            <Button ToolTip="Редактировать">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Height="20" Source="Media/rewrite.png"/>
+                                </StackPanel>
+                            </Button>
+                            <Button ToolTip="Удалить">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Height="20" Source="Media/delete.png"/>
+                                </StackPanel>
+                            </Button>
                         </ToolBar>
                         <ToolBar Band="1" BandIndex="0">
                             <Label Content="Отправители:"/>
