--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -13,7 +13,7 @@
                 <MenuItem Header="Выход" Click="Exit_Click"/>
             </MenuItem>
             <MenuItem Header="Справка">
-                <MenuItem Header="О программе"/>
+                <MenuItem Header="О программе" Click="About_Click"/>
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
@@ -73,8 +73,123 @@
                     </DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Расписание"></TabItem>
-            <TabItem Header="Письма"></TabItem>
+            <TabItem Header="Расписание">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <GroupBox Header="Управление" Grid.Column="0">
+                        <StackPanel>
+                            <TextBlock HorizontalAlignment="Center">Дата отправки</TextBlock>
+                            <Calendar/>
+                            <TextBlock HorizontalAlignment="Center">Время отправки</TextBlock>
+                            <TextBox Margin="5,5,5,0"/>
+                            <Button Margin="10,45,10,5" Height="25" Content="Отправить сейчас"/>
+                            <Button Margin="10,5,10,20" Height="25" Content="Запланировать"/>
+                        </StackPanel>
+                    </GroupBox>
+                    <GroupBox Header="Задания"  Grid.Column="1">
+                        <ListBox>
+                            <ListBoxItem>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Отправитель:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Иванов И.И."/>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="Получатели:"/>
+                                    <StackPanel Grid.Column="1" Grid.Row="1">
+                                        <TextBlock Text="Иванов"/>
+                                        <TextBlock Text="Петров"/>
+                                        <TextBlock Text="Сидоров"/>
+                                    </StackPanel>
+                                    <TextBlock Grid.Column="0" Grid.Row="2" Text="Письмо:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="2" Text="Какое-то письмо"/>
+                                </Grid>
+                            </ListBoxItem>
+                            <ListBoxItem>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Отправитель:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Иванов И.И."/>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="Получатели:"/>
+                                    <StackPanel Grid.Column="1" Grid.Row="1">
+                                        <TextBlock Text="Иванов"/>
+                                        <TextBlock Text="Петров"/>
+                                        <TextBlock Text="Сидоров"/>
+                                    </StackPanel>
+                                    <TextBlock Grid.Column="0" Grid.Row="2" Text="Письмо:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="2" Text="Какое-то письмо"/>
+                                </Grid>
+                            </ListBoxItem>
+
+                            <ListBoxItem>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Отправитель:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Иванов И.И."/>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="Получатели:"/>
+                                    <StackPanel Grid.Column="1" Grid.Row="1">
+                                        <TextBlock Text="Иванов"/>
+                                        <TextBlock Text="Петров"/>
+                                        <TextBlock Text="Сидоров"/>
+                                    </StackPanel>
+                                    <TextBlock Grid.Column="0" Grid.Row="2" Text="Письмо:"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="2" Text="Какое-то письмо"/>
+                                </Grid>
+                            </ListBoxItem>
+                        </ListBox>
+                    </GroupBox>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Письма">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" MinWidth="150" MaxWidth="250"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <GroupBox Grid.Column="0" Header="Письма">
+                        <ListBox>
+                            <ListBoxItem>Письмо 1</ListBoxItem>
+                            <ListBoxItem>Письмо 2</ListBoxItem>
+                            <ListBoxItem>Письмо 3</ListBoxItem>
+                        </ListBox>
+                    </GroupBox>
+                    <GroupBox Grid.Column="1" Header="Редактор">
+                        <DockPanel>
+                            <GroupBox Header="Заголовок" DockPanel.Dock="Top">
+                                <TextBox/>
+                            </GroupBox>
+                            <GroupBox Header="Текст письма">
+                                <TextBox AcceptsReturn="True" AcceptsTab="True"/>
+                            </GroupBox>
+                        </DockPanel>
+                    </GroupBox>
+                </Grid>
+            </TabItem>
             <TabItem Header="Статистика"></TabItem>
         </TabControl>
     </DockPanel>
