--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="http://schemas.fontawesome.com/icons/"
         xmlns:local="clr-namespace:MailSender"
+        xmlns:data="clr-namespace:MailSender.Data"
+        xmlns:models="clr-namespace:MailSender.Models"
         mc:Ignorable="d"
         Title="Рассыльщик почты" Height="450" Width="800">
     <DockPanel>
@@ -34,10 +36,8 @@
                     <ToolBarTray Grid.Row="0">
                         <ToolBar>
                             <Label Content="Сервера:" Margin="0,0,25,0"/>
-                            <ComboBox Width="100" SelectedIndex="0">
-                                <ComboBoxItem Content="Сервер 1"/>
-                                <ComboBoxItem Content="Сервер 2"/>
-                                <ComboBoxItem Content="Сервер 3"/>
+                            <ComboBox Width="100" SelectedIndex="0" Name="ServersList" ItemsSource="{x:Static data:TestData.Servers}" DisplayMemberPath="Name">
+                                
                             </ComboBox>
                             <Button ToolTip="Добавить" im:Awesome.Content="Solid_Plus" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Редактировать" im:Awesome.Content="Solid_Edit" Foreground="#FF7E98DE"/>
