--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -176,19 +176,21 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <GroupBox Grid.Column="0" Header="Письма">
-                        <ListBox>
-                            <ListBoxItem>Письмо 1</ListBoxItem>
-                            <ListBoxItem>Письмо 2</ListBoxItem>
-                            <ListBoxItem>Письмо 3</ListBoxItem>
+                        <ListBox ItemsSource="{x:Static data:TestData.Letters}" Name="LetterList">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Title}" ToolTip="{Binding Body}"/>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
                         </ListBox>
                     </GroupBox>
                     <GroupBox Grid.Column="1" Header="Редактор">
                         <DockPanel>
                             <GroupBox Header="Заголовок" DockPanel.Dock="Top">
-                                <TextBox/>
+                                <TextBox Text="{Binding SelectedItem.Title, ElementName=LetterList}"/>
                             </GroupBox>
                             <GroupBox Header="Текст письма">
-                                <TextBox AcceptsReturn="True" AcceptsTab="True"/>
+                                <TextBox Text="{Binding SelectedItem.Body, ElementName=LetterList}" AcceptsReturn="True" AcceptsTab="True"/>
                             </GroupBox>
                         </DockPanel>
                     </GroupBox>
