--- a/MailSender/App.xaml
+++ b/MailSender/App.xaml
@@ -4,10 +4,11 @@
              xmlns:local="clr-namespace:MailSender"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary>
+        <local:ServiceLocator x:Key="Locator"/>
+        <!--<ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        </ResourceDictionary>-->
     </Application.Resources>
 </Application>
