Команды в модели-представления главного окна

--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -16,10 +16,10 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
-                <MenuItem Header="Выход" Click="Exit_Click"/>
+                <MenuItem Header="Выход" Command="{Binding ExitCommand}"/>
             </MenuItem>
             <MenuItem Header="Справка">
-                <MenuItem Header="О программе" Click="About_Click"/>
+                <MenuItem Header="О программе" Command="{Binding AboutCommad}"/>
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
