--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -40,8 +40,9 @@
                     <ToolBarTray Grid.Row="0">
                         <ToolBar>
                             <Label Content="Сервера:" Margin="0,0,25,0"/>
-                            <ComboBox Width="100" SelectedIndex="0" Name="ServersList" ItemsSource="{x:Static data:TestData.Servers}" DisplayMemberPath="Name">
+                            <ComboBox Width="100" SelectedIndex="0" ItemsSource="{Binding Servers}" DisplayMemberPath="Name">
                             </ComboBox>
+                            <Button ToolTip="Загрузить" im:Awesome.Content="Solid_Download" Command="{Binding LoadServersCommand}" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Добавить" im:Awesome.Content="Solid_Plus" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Редактировать" im:Awesome.Content="Solid_Edit" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Удалить" im:Awesome.Content="Solid_Trash" Foreground="#FF7E98DE"/>
