--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -18,6 +18,9 @@
             <MenuItem Header="Файл">
                 <MenuItem Header="Выход" Command="{Binding ExitCommand}"/>
             </MenuItem>
+            <MenuItem Header="Данные">
+                <MenuItem Header="Загрузка" Command="{Binding LoadDataCommand}"/>
+            </MenuItem>
             <MenuItem Header="Справка">
                 <MenuItem Header="О программе" Command="{Binding AboutCommad}"/>
             </MenuItem>
@@ -42,14 +45,13 @@
                             <Label Content="Сервера:" Margin="0,0,25,0"/>
                             <ComboBox Width="100" SelectedIndex="0" ItemsSource="{Binding Servers}" DisplayMemberPath="Name">
                             </ComboBox>
-                            <Button ToolTip="Загрузить" im:Awesome.Content="Solid_Download" Command="{Binding LoadServersCommand}" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Добавить" im:Awesome.Content="Solid_Plus" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Редактировать" im:Awesome.Content="Solid_Edit" Foreground="#FF7E98DE"/>
                             <Button ToolTip="Удалить" im:Awesome.Content="Solid_Trash" Foreground="#FF7E98DE"/>
                         </ToolBar>
                         <ToolBar Band="1" BandIndex="0">
                             <Label Content="Отправители:"/>
-                            <ComboBox Width="100" SelectedIndex="0" Name="SenderList" ItemsSource="{x:Static data:TestData.Senders}">
+                            <ComboBox Width="100" SelectedIndex="0" Name="SenderList" ItemsSource="{Binding Senders}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate DataType="{x:Type models:Sender}">
                                         <StackPanel Orientation="Horizontal" >
@@ -72,9 +74,9 @@
                             <Button ToolTip="Удалить" im:Awesome.Content="Solid_Trash" Foreground="#FF7E98DE"/>
                         </ToolBar>
                     </ToolBarTray>
-                    <DataGrid Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{x:Static data:TestData.Recipients}" VerticalGridLinesBrush="#FFE0E3BC" HorizontalGridLinesBrush="#FFE0E3BC" CanUserAddRows="False">
+                    <DataGrid Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{Binding Recipients}" VerticalGridLinesBrush="#FFE0E3BC" HorizontalGridLinesBrush="#FFE0E3BC" CanUserAddRows="False">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" MinWidth="45" MaxWidth="80" Binding="{Binding ID}"/>
+                            <DataGridTextColumn Header="ID" MinWidth="45" MaxWidth="80" Binding="{Binding Id}"/>
                             <DataGridTextColumn Header="Имя" MinWidth="150" Binding="{Binding Name}"/>
                             <DataGridTextColumn Header="Адрес" MinWidth="150" Binding="{Binding Address}"/>
                             <DataGridTextColumn Header="Описание" MinWidth="150" Binding="{Binding Discription}"/>
@@ -186,7 +188,7 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <GroupBox Grid.Column="0" Header="Письма">
-                        <ListBox ItemsSource="{x:Static data:TestData.Letters}" Name="LetterList">
+                        <ListBox ItemsSource="{Binding Letters}" Name="LetterList">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Title}" ToolTip="{Binding Body}"/>
