--- a/MailSender/MainWindow.xaml
+++ b/MailSender/MainWindow.xaml
@@ -76,7 +76,12 @@
                         </ToolBar>
                     </ToolBarTray>
                     <Grid Grid.Row="1">
-                        <v:RecipientsView/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="3*"/>
+                        </Grid.ColumnDefinitions>
+                        <v:RecipientsView Grid.Column="0"/>
+                        <v:RecipientEditor Grid.Column="1"/>
                     </Grid>
                 </Grid>
             </TabItem>
