--- a/MailSender/View/RecipientsView.xaml
+++ b/MailSender/View/RecipientsView.xaml
@@ -2,11 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
              xmlns:v="clr-namespace:MailSender.View" 
              xmlns:viewmodels="clr-namespace:MailSender.ViewModels" 
-             DataContext="{Binding MainModel, Source={StaticResource Locator}}"
-             mc:Ignorable="d" 
+            
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel Margin="3">
         <TextBlock DockPanel.Dock="Top" Text="Получатели" HorizontalAlignment="Center" FontSize="15"/>
@@ -19,7 +18,9 @@
             <Button Content="Сохранить данные" Margin="3" Padding="15,5" IsEnabled="False"/>
         </UniformGrid>
         <DataGrid AutoGenerateColumns="False"
+                  IsReadOnly="True"
                   ItemsSource="{Binding Recipients}"
+                  SelectedItem="{Binding SelectedRecipient}"
                   GridLinesVisibility="Vertical"
                   VerticalGridLinesBrush="Gray"
                   AlternatingRowBackground="#4C87CEAB"
@@ -29,7 +30,7 @@
                 <DataGridTextColumn Header="ID" MinWidth="40" MaxWidth="80" Binding="{Binding Id}"/>
                 <DataGridTextColumn Header="Имя" Width="*" MinWidth="150" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Адрес" MinWidth="140" Binding="{Binding Address}"/>
-                <DataGridTextColumn Header="Описание" MinWidth="120" Binding="{Binding Description}"/>
+                <DataGridTextColumn Header="Описание" MinWidth="120" Binding="{Binding Discription}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
