--- a/MailSender/View/RecipientEditor.xaml
+++ b/MailSender/View/RecipientEditor.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MailSender.View"
-             
+             xmlns:local="clr-namespace:MailSender.View" 
+             xmlns:viewmodels="clr-namespace:MailSender.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
@@ -18,7 +19,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Id:" HorizontalAlignment="Right"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Id}"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Id, NotifyOnValidationError=True}"
+                 Validation.Error="OnIdValidationError"/>
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Имя:" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Name}"/>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Адрес:" HorizontalAlignment="Right"/>
