--- a/MailSender/View/RecipientEditor.xaml
+++ b/MailSender/View/RecipientEditor.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MailSender.View" 
              xmlns:viewmodels="clr-namespace:MailSender.ViewModels" 
+             xmlns:validation="clr-namespace:MailSender.Infrastructure.ValidationRules"
              d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="10">
+    <Grid Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
@@ -25,7 +26,34 @@
         <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Name, NotifyOnValidationError=True, ValidatesOnExceptions=True, ValidatesOnDataErrors=True}"
                  Validation.Error="OnIdValidationError"/>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Адрес:" HorizontalAlignment="Right"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Address}"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,3" Validation.Error="OnIdValidationError">
+            <Validation.ErrorTemplate>
+                <ControlTemplate>
+                    <DockPanel>
+                        <TextBlock Text="!" DockPanel.Dock="Right"
+                                   FontWeight="Bold" Foreground="Red"
+                                   VerticalAlignment="Center"
+                                   Margin="3,0,0,0"/>
+                        <Border BorderBrush="Red" BorderThickness="3" CornerRadius="3" Padding="3">
+                            <AdornedElementPlaceholder/>
+                        </Border>
+                    </DockPanel>
+                </ControlTemplate>
+            </Validation.ErrorTemplate>
+            <TextBox.Text>
+                <Binding Path="SelectedRecipient.Address"
+                         NotifyOnValidationError="True"
+                         UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <validation:RegExValidation Pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$"
+                                                    ErrorMessage="Неверный формат адреса электронной почты"/>
+                        <DataErrorValidationRule/>
+                        <ExceptionValidationRule/>
+                        <NotifyDataErrorValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <TextBlock Grid.Row="3" Grid.Column="0" Text="Описание:" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="3" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Discription}"/>
     </Grid>
