--- a/MailSender/View/RecipientEditor.xaml
+++ b/MailSender/View/RecipientEditor.xaml
@@ -9,6 +9,25 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
+        <Grid.Resources>
+            <Style TargetType="TextBox">
+                <Setter Property="Validation.ErrorTemplate">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <DockPanel>
+                                <TextBlock Text="!" DockPanel.Dock="Right"
+                                           FontWeight="Bold" Foreground="Red"
+                                           VerticalAlignment="Center"
+                                           Margin="3,0,0,0"/>
+                                <Border BorderBrush="Red" BorderThickness="3" CornerRadius="3" Padding="3">
+                                    <AdornedElementPlaceholder/>
+                                </Border>
+                            </DockPanel>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
@@ -27,7 +46,7 @@
                  Validation.Error="OnIdValidationError"/>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Адрес:" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,3" Validation.Error="OnIdValidationError">
-            <Validation.ErrorTemplate>
+            <!--<Validation.ErrorTemplate>
                 <ControlTemplate>
                     <DockPanel>
                         <TextBlock Text="!" DockPanel.Dock="Right"
@@ -39,7 +58,7 @@
                         </Border>
                     </DockPanel>
                 </ControlTemplate>
-            </Validation.ErrorTemplate>
+            </Validation.ErrorTemplate>-->
             <TextBox.Text>
                 <Binding Path="SelectedRecipient.Address"
                          NotifyOnValidationError="True"
