--- a/MailSender/View/RecipientEditor.xaml
+++ b/MailSender/View/RecipientEditor.xaml
@@ -39,13 +39,11 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Id:" HorizontalAlignment="Right"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Id, NotifyOnValidationError=True}"
-                 Validation.Error="OnIdValidationError"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Id, NotifyOnValidationError=True}"/>
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Имя:" HorizontalAlignment="Right"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Name, NotifyOnValidationError=True, ValidatesOnExceptions=True, ValidatesOnDataErrors=True}"
-                 Validation.Error="OnIdValidationError"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,0,3" Text="{Binding SelectedRecipient.Name, NotifyOnValidationError=True, ValidatesOnExceptions=True, ValidatesOnDataErrors=True}"/>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Адрес:" HorizontalAlignment="Right"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,3" Validation.Error="OnIdValidationError">
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,3">
             <!--<Validation.ErrorTemplate>
                 <ControlTemplate>
                     <DockPanel>
