--- a/Tests/TestWpf/MainWindow.xaml
+++ b/Tests/TestWpf/MainWindow.xaml
@@ -6,34 +6,7 @@
         xmlns:local="clr-namespace:TestWpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Slider VerticalContentAlignment="Top" Margin="30,10" Minimum="0" Maximum="750"
-                Name="HorizontPos"/>
-        <Slider Orientation="Vertical" HorizontalAlignment="Left" Margin="10,30" Minimum="0" Maximum="400"
-                Name="VerticalPos"/>
-        <TextBox HorizontalAlignment="Right" VerticalAlignment="Top" Margin="30" Width="50" Text="{Binding Value, ElementName=HorizontPos, StringFormat=f2}"/>
-        <TextBox HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Width="50" Text="{Binding Value, ElementName=VerticalPos, StringFormat=f2}"/>
-        
-        <Canvas Margin="30">
-            <Ellipse Width="30" Height="30" Fill="SkyBlue" Stroke="Violet" StrokeThickness="4" 
-                     Canvas.Left="{Binding Value, ElementName=HorizontPos}"
-                     Canvas.Bottom="{Binding Value, ElementName=VerticalPos}">
-                <Ellipse.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform Angle="{Binding ElementName=Angle, Path=Value}"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Ellipse.RenderTransform>
-            </Ellipse>
-        </Canvas>
-    </Grid>
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Theme.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+    <DockPanel>
+
+    </DockPanel>
 </Window>
